--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,3 +47,13 @@ TARGET_LINK_LIBRARIES(pStartLogic
    mbutil
    m
    pthread)
+
+find_program(CTAGS ctags)
+if (CTAGS)
+    FIND_FILE(MAKE_CTAGS make_ctags.sh ../..)
+    ADD_CUSTOM_TARGET(start_ctags ALL
+        ${MAKE_CTAGS} .
+        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+        DEPENDS pStartLogic
+    )
+endif(CTAGS)
